<?xml version="1.0"?>
<package>
  <name>jrl-mathtools</name>
  <version>0.1.0</version>
  <description>The jrl-mathtools package</description>

  <maintainer email="hilario@todo.todo">hilario</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sot_cmake</build_depend>

</package>
